deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: trv-schedule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trv-schedule
  template:
    metadata:
      labels:
        app: trv-schedule
    spec:
      containers:
      - image: nginx
        name: trv-schedule
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-data
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-data
        emptyDir: {}
