service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trv-schedule
spec:
  ports:
  - port: 8888
    targetPort: 8888
